# DoppelArm

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: calibration.rs  lib.rs  main.rs  recording.rs  state.rs
src-tauri/src/arm/: config.rs  controller.rs  mirror.rs  mod.rs
src-tauri/src/commands/: arm_cmds.rs  calibration_cmds.rs  mirror_cmds.rs  mod.rs  recording_cmds.rs  serial_cmds.rs
src-tauri/src/serial/: bus.rs  mod.rs  port.rs
src/lib/components/: ArmPane.svelte  CameraModal.svelte  CameraPane.svelte  Toolbar.svelte
src/lib/components/calibration/: CalibrationModal.svelte  CalibrationWizard.svelte
src/lib/components/controls/: JointSliders.svelte  MirrorToggle.svelte  RecordControls.svelte
src/lib/components/scene/: ArmScene.svelte  GridFloor.svelte  Gripper.svelte  IKTarget.svelte  Joint.svelte  Link.svelte  RobotArm.svelte  SingleArmScene.svelte  StlMesh.svelte
src/lib/components/setup/: MotorConfigurator.svelte  PortSelector.svelte  SetupModal.svelte  SetupWizard.svelte
src/lib/components/ui/: Sidebar.svelte  StatusBar.svelte
src/lib/ik/: solver.ts
src/lib/stores/: app.ts  calibration.ts  connection.ts  joints.ts  recording.ts
src/lib/tauri/: commands.ts
src/lib/utils/: arm-config.ts  color-tracking.ts  fk.ts  vision-calibration.ts  visual-config.ts
src/routes/: +layout.svelte  +page.svelte
