[package]
name = "doppelarm"
version = "0.1.0"
edition = "2021"
description = "Robotic arm control and visualization"

[lib]
name = "doppelarm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serialport = "4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
